refactor: change folder structure

--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "from model.detr import DETR\n",
+    "from detr.model.detr import DETR\n",
     "import torch\n",
     "import torchvision.transforms as T\n",
     "from PIL import Image\n",
     "import requests\n",
-    "from utils import get_transform, check_image_size, rescale_bboxes, plot_results"
+    "from detr.utils import get_transform, check_image_size, rescale_bboxes, plot_results"
    ],
    "outputs": [],
    "metadata": {}
